[gd_scene load_steps=10 format=3 uid="uid://bmqt4qrrghudt"]

[ext_resource type="Script" path="res://scenes/table/table.gd" id="1_m7gay"]
[ext_resource type="Texture2D" uid="uid://dihasscgbbns5" path="res://Graphics/34379.jpg" id="2_h0x7g"]
[ext_resource type="PackedScene" uid="uid://q3vx4alcf1x8" path="res://scenes/bidding/bidding.tscn" id="3_n558k"]
[ext_resource type="PackedScene" uid="uid://b8scu1hn1isma" path="res://scenes/hand/hand.tscn" id="4_8jws4"]
[ext_resource type="Theme" uid="uid://g5w7cullef56" path="res://default.tres" id="5_bsgnf"]

[sub_resource type="Theme" id="Theme_1srym"]

[sub_resource type="Animation" id="Animation_oul6w"]
resource_name = "simple_pop_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1.10957),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7wb01"]
resource_name = "simple_pop_up_disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdvj5"]
_data = {
"simple_pop_up": SubResource("Animation_oul6w"),
"simple_pop_up_disappear": SubResource("Animation_7wb01")
}

[node name="Table" type="Node2D" groups=["root"]]
script = ExtResource("1_m7gay")

[node name="background" type="TextureRect" parent="."]
modulate = Color(0.541176, 0.541176, 0.541176, 1)
scale = Vector2(0.855, 0.72)
texture = ExtResource("2_h0x7g")
metadata/_edit_lock_ = true

[node name="bidding" parent="." instance=ExtResource("3_n558k")]

[node name="TableCards" type="CanvasLayer" parent="." groups=["table"]]

[node name="Player1" type="CanvasLayer" parent="." groups=["ui_layer"]]

[node name="Hand" parent="Player1" instance=ExtResource("4_8jws4")]

[node name="Oeste" type="CanvasLayer" parent="."]

[node name="Hand" parent="Oeste" instance=ExtResource("4_8jws4")]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = -1028.0
offset_top = -25.0
offset_right = -488.0
offset_bottom = 35.0
grow_horizontal = 1
grow_vertical = 2

[node name="Norte" type="CanvasLayer" parent="." groups=["ui_layer2"]]

[node name="Hand" parent="Norte" instance=ExtResource("4_8jws4")]
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 125.0
grow_vertical = 1

[node name="Este" type="CanvasLayer" parent="."]

[node name="Hand" parent="Este" instance=ExtResource("4_8jws4")]
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 1283.0
offset_top = -25.0
offset_right = 1823.0
offset_bottom = 35.0
grow_horizontal = 1
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 625.0
offset_right = 1283.0
offset_bottom = 718.0
grow_horizontal = 2
grow_vertical = 0

[node name="DealRandom" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -216.0
offset_bottom = 47.0
grow_horizontal = 0
focus_mode = 0
text = "Repartir Aleatorio"

[node name="DealNoTriumph" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -46.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme = SubResource("Theme_1srym")
text = "Repartir no triunfo"

[node name="Help" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -431.0
offset_top = -93.0
offset_right = -215.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme = ExtResource("5_bsgnf")
text = "Ayuda"

[node name="LostCounter" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = -48.5
offset_right = 192.0
offset_bottom = 49.5
grow_vertical = 2
theme = ExtResource("5_bsgnf")
theme_override_colors/font_uneditable_color = Color(0.803922, 0, 0, 1)
text = "0"
alignment = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true

[node name="WonCounter" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -49.0
offset_right = 96.0
offset_bottom = 49.0
grow_vertical = 2
theme = ExtResource("5_bsgnf")
theme_override_colors/font_uneditable_color = Color(0, 1, 0, 1)
text = "0"
alignment = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true

[node name="line" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -444.5
offset_top = -70.0
offset_right = -200.5
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_bsgnf")
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
text = "Jugando:"
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true

[node name="GameMode" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -339.5
offset_top = -70.0
offset_right = 13.5
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_bsgnf")
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true

[node name="reset" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 984.0
offset_right = 1131.0
offset_bottom = 93.0
focus_mode = 0
theme = ExtResource("5_bsgnf")
text = "Reiniciar
manos"

[node name="return" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1133.0
offset_right = 1280.0
offset_bottom = 93.0
focus_mode = 0
theme = ExtResource("5_bsgnf")
text = "Volver"

[node name="Rounds" type="Node" parent="."]

[node name="Panel2" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 1)
offset_left = 441.0
offset_top = 219.0
offset_right = 841.0
offset_bottom = 419.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(200, 100)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_bsgnf")
text = "Jugando apuesta: "

[node name="Label2" type="Label" parent="Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_bsgnf")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_bsgnf")
text = "Empieza: "

[node name="Label2" type="Label" parent="Panel2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_bsgnf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel2"]
libraries = {
"": SubResource("AnimationLibrary_tdvj5")
}

[connection signal="pressed" from="Panel/DealRandom" to="." method="_on_deal_random_pressed"]
[connection signal="pressed" from="Panel/DealNoTriumph" to="." method="_on_deal_no_triumph_pressed"]
[connection signal="pressed" from="Panel/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Panel/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Panel/return" to="." method="_on_return_pressed"]
